<resources>
    <string name="app_name">DOBCalc</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="_04_07_2022">04/07/2022</string>
    <string name="selected_date">Selected Date</string>
    <string name="_14000000">14000000</string>
    <string name="in_minutes_till_date">In minutes till date</string>
</resources>