<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:background="@color/bgColor"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textColor="@color/textColor"
        android:background="@color/black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="6dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingVertical="15dp"
        android:backgroundTint="@color/bgBtn"
        android:textSize="17sp"
        android:text="@string/select_date"
        />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_04_07_2022"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/selected_date"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_14000000"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in_minutes_till_date"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</LinearLayout>